@@ -1,3 +1,9 @@
+2012-04-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/hc08/ralloc2.cc,
+	  src/hc08/gen.c:
+	  Made hc08 code generation more robust wrt. surviving registers and register operands.
+
 2012-04-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/hc08/ralloc2.cc,
